# pyflood2022

./: .gitignore  CITATION.cff  LICENSE  LICENSE.txt  README.md  env_pyflood2022.yml  env_tiny.yml  pyproject.toml
.github/workflows/: python-package-conda.yml
data/: NSW_QLD_border.dbf  NSW_QLD_border.shx  australia.shx  australia_northern_rivers.dbf  australia_northern_rivers.qix  australia_northern_rivers.shx  awral_data.nc  flood_data_counts_MAJOR_FLOOD.csv  flood_data_counts_SITEID.csv  main_rivers_NSW+QLD_simplified4.dbf  main_rivers_NSW+QLD_simplified4.shx  main_towns.csv  major_floods.csv  propag_data.csv  propag_data_sites_info.json  sites_info.csv  streamflow_data_138110.csv  streamflow_data_203014.csv  streamflow_data_sites_info.csv
data/floods/: awap_data.nc  awral_data.nc  main_towns.csv  major_floods.csv  propag_data.csv  streamflow_data_138110.csv  streamflow_data_202001.csv  streamflow_data_203010.csv  streamflow_data_203014.csv  waterlevel_data_203402.csv
data/gis/: NSW_QLD_border.qix  NSW_QLD_border.shp  australia.dbf  australia.shp  australia_northern_rivers.shp  catchment_boundaries.dbf  catchment_boundaries.qix  catchment_boundaries.shp  catchment_boundaries.shx  main_rivers_NSW+QLD_simplified4.shp
scripts/: map_plot.py  propag_plot.py  regional_floods_maps.py  regional_floods_plot.py  regional_floods_stats.py  scatter_plot.py  surprise_plot.py
