[project]
name = "pyflood2022"
version = "1.0"
authors = [{name = "Julien Lerat, CSIRO Environment", email="julien.lerat@csiro.au"}]
description = "Data and code supporting the 2022 flood paper"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["hydrology"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python 3",
    "Topic :: Scientific/Engineering :: Hydrology"
]    
requires-python = ">= 3.10"
dependencies = [
    "matplotlib >= 3.8.4",
    "netcdf4 >= 1.6.4",
    "numpy >= 1.26.4",
    "pandas >= 2.2.1",
    "pyproj >= 3.5.0",
    "pyshp >= 2.3.1",
    "python >= 3.10.6",
    "pyshp >= 2.3.1",
    "scipy >= 1.13.0",
    "statsmodels >= 0.14.1"
]

